--- a/RAOC.html
+++ b/RAOC.html
@@ -2,63 +2,60 @@
     <head>
     <style type="text/css">
 		body {
-		  
-		  margin: 0;
-		  padding: 1em;
+			margin: 0;
+			padding: 1em;
 		}
 
 		.container {
-		  display: grid;
-		  grid-template-columns: repeat(3, 1fr);
-		  grid-template-rows: auto;
-		  grid-gap: 10px;
+			display: grid;
+			grid-template-columns: repeat(3, 1fr);
+			grid-template-rows: auto;
+			grid-gap: 10px;
 		}
 
 		.item-a {
-		  grid-column: 2 / 3;
-		  grid-row: 1 / 2;
-		  justify-self: center;
+			grid-column: 2 / 3;
+			grid-row: 1 / 2;
+			justify-self: center;
 		}
 
 		.item-b {
-		  grid-column: 2 / 3;
-		  grid-row: 2 / 3;
-		  justify-self: center;
-		  text-align: center;
-		  font: 12px Courier, sans-serif;
+			grid-column: 2 / 3;
+			grid-row: 2 / 3;
+			justify-self: center;
+			text-align: center;
+			font: 12px Courier, sans-serif;
 
 		}
 
 		.item-c {
-		  grid-column: 2 / 3;
-		  grid-row: 3 / 4;
-		  justify-self: center;
+			grid-column: 2 / 3;
+			grid-row: 3 / 4;
+			gjustify-self: center;
 
 		}
 
 		button {
-		  background-color: #f0dfaf;
-		  border: none;
-		  padding: 0.7em;
-		  color: gray;
-		  display: block;
-		  font: 12px Courier, sans-serif;
-
-		  -webkit-transition: 0.5s;
+			background-color: #f0dfaf;
+			border: none;
+			padding: 0.7em;
+			color: gray;
+			display: block;
+			font: 12px Courier, sans-serif;
+			justify-self: center;
+			-webkit-transition: 0.5s;
 
 		}
 
 		button:hover {
-		  background-color: pink;   
-		  -webkit-transition: 0.5s;
+			background-color: pink;   
+			-webkit-transition: 0.5s;
 
 		}
 
 		#face {
-		  height: 35vw;
-		  -webkit-transition: 0.5s;
-		  
-
+			height: 35vw;
+			-webkit-transition: 0.1s;
 		}
 
 		{
