--- a/RAOC.html
+++ b/RAOC.html
@@ -58,7 +58,6 @@
 		}
 
 		#face {
-			height: 500px;
 			-webkit-transition: 0.1s;
 		}
 
@@ -75,7 +74,7 @@
 
 <div class="container">
 	<div class="item-a">  
-		<img id="face" src="https://i.imgur.com/EuPmp4C.jpg">
+		<img id="face" style="max-width:600px;width:100%" src="https://i.imgur.com/EuPmp4C.jpg">
 	</div>
 	  
 	<div id="card" class="item-b">
